--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <!-- Navbar -->
     <header>
-        <a href="#" class="logo">Surya <span>Graha Perkasa.</span></a>
+        <a href="#" class="logo">Surya <span>Graha Persada.</span></a>
         <div class="bx bx-menu" id="menu-icon"></div>
  
         <ul class="navbar">
@@ -96,7 +96,7 @@
     <!-- Footer -->
     <section class="footer" id="footer">
         <div class="footer-box">
-            <h2>Surya <span>Graha Perkasa</span></h2>
+            <h2>Surya <span>Graha Persada</span></h2>
             <p>Desain Interior Sesuai Kebutuhan mu.<br> Ragam Desain Interior untuk Setiap Kebutuhan Gaya Hidup.</p>
             <div class="social">
                 <a href="#"><i class='bx bxl-facebook'></i></a>
@@ -129,7 +129,7 @@
         </div>
     </section>
     <div class="copyright">
-        <p>&#169; SuryaGraha All Right Reserved.</p>
+        <p>&#169; SuryaGrahaPersada All Right Reserved.</p>
     </div>
     <!-- Link To JS -->
     <script src="main.js"></script>
